# rust-adventure

./: Cargo.toml  README.md  manifest.yaml
adventure-time-cli/: Cargo.toml
adventure-time-cli/src/: main.rs
adventures/001-hello-world/: Cargo.toml  README.md
adventures/003-mutable-variables/: Cargo.toml
adventures/003-mutable-variables/tests/: output.rs
adventures/004-variable-types/tests/: output.rs
adventures/005-functions/: Cargo.toml
adventures/005-functions/src/: main.rs
adventures/007-struct-impl/: Cargo.toml
adventures/010-result/src/: main.rs
adventures/011-matching/: Cargo.toml
adventures/011-matching/tests/: output.rs
adventures/a-001-hello-world/src/: main.rs
adventures/a-001-hello-world/tests/: output.rs
adventures/a-002-variables/: Cargo.toml
adventures/a-002-variables/src/: main.rs
adventures/a-002-variables/tests/: output.rs
adventures/a-003-mutable-variables/src/: main.rs
adventures/a-004-variable-types/: Cargo.toml
adventures/a-004-variable-types/src/: main.rs
adventures/a-005-functions/tests/: output.rs
adventures/a-006-unit-tests/: Cargo.toml
adventures/a-006-unit-tests/src/: main.rs
adventures/a-006-unit-tests/tests/: output.rs
adventures/a-007-struct-impl/src/: main.rs
adventures/a-007-struct-impl/tests/: output.rs
adventures/a-008-errors-question-mark/: Cargo.toml
adventures/a-008-errors-question-mark/src/: main.rs
adventures/a-008-errors-question-mark/tests/: output.rs
adventures/a-009-option/: Cargo.toml
adventures/a-010-result/: Cargo.toml
scripts/: new-adventure.sh
(+4 files in other folders)
